Actualizar meta descripción

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>CSS Proyectos 02 - Header Business Agency</title>
 
     <!-- <link rel="stylesheet" href="css/styles.css" /> -->
-    <meta name="description" content="Descripción breve del proyecto" />
+    <meta name="description" content="Proyecto CSS 02 - Header Business Agency" />
     <meta name="author" content="Tu Nombre o Equipo" />
 
     <meta property="og:title" content="">
