Actualizar meta descripción y autor en index.html

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <title>CSS Proyectos 02 - Header Business Agency</title>
 
     <!-- <link rel="stylesheet" href="css/styles.css" /> -->
-    <meta name="description" content="Proyecto CSS 02 - Header Business Agency" />
-    <meta name="author" content="Tu Nombre o Equipo" />
+    <meta name="description" content="Grow your business to the next level to improve your business performance to stay competitive" />
+    <meta name="author" content="Álvaro" />
 
     <meta property="og:title" content="">
     <meta property="og:type" content="">
