--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <title>CSS Proyectos 02 - Header Business Agency</title>
     <meta name="description" content="Grow your business to the next level to improve your business performance to stay competitive" />
-    <meta name="author" content="Álvaro" />
+    <meta name="author" content="Álvaro Barrena Revilla" />
   </head>
   <body>
     <div class="container">
